--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cookie": "^0.3.1",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "prop-types": "^15.7.2",
@@ -27,14 +28,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-proposal-class-properties": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
     "rimraf": "^2.6.3"
   }
 }
