--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "nodemon index2.js",
+    "start": "node index2.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.15",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
+    "passport-twitch": "^1.0.3",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
