--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "cookie-session": "^2.0.0-beta.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.13",
