--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "cookie": "^0.3.1",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
