--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.6.1",
