--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "passport-twitch": "^1.0.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "twitch-js": "^2.0.0-beta.30"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
