--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-oauth": "^1.0.0",
     "passport-twitch": "^1.0.3",
     "request": "^2.88.0",
+    "socket.io": "^2.2.0",
     "twitch-js": "^2.0.0-beta.30"
   },
   "devDependencies": {
