--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "passport-twitch": "^1.0.3",
+    "patreon": "^0.4.1",
     "request": "^2.88.0",
     "socket.io": "^2.2.0",
     "twitch-js": "^2.0.0-beta.30"
