--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.15.6",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.15",
+    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "passport-twitch": "^1.0.3",
