--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.5.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
