--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cookie": "^0.3.1",
+    "lodash": "^4.17.11",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "prop-types": "^15.7.2",
