--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.13.2",
     "cookie-parser": "^1.4.4",
@@ -29,7 +29,8 @@
     "patreon": "^0.4.1",
     "request": "^2.88.0",
     "socket.io": "^2.2.0",
-    "twitch-js": "^2.0.0-beta.30"
+    "twitch-js": "^2.0.0-beta.30",
+    "valid-data-url": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
