--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "StreamAchievements-Client",
   "version": "0.0.0",
   "description": "",
+  "homepage": "http://streamachievements.com/",
   "main": "index.js",
   "scripts": {
     "dev": "react-scripts start",
     "devServer": "nodemon server.js",
     "start": "serve -s build",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-snap",
     "heroku-postbuild": "react-scripts build"
   },
   "keywords": [],
@@ -38,7 +39,7 @@
   },
   "devDependencies": {
     "rimraf": "^2.6.3",
-    "uglifyjs-webpack-plugin": "^2.1.3"
+    "react-snap": "^1.23.0"
   },
   "browserslist": [
     ">0.2%",
