--- a/src/package.json
+++ b/src/package.json
@@ -30,7 +30,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://api.streamachievements.com",
   "browserslist": [
     ">0.2%",
     "not dead",
