--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "devServer": "nodemon server.js",
     "start": "serve -s build",
     "build": "react-scripts build && react-snap",
-    "heroku-postbuild": "react-scripts build"
+    "postbuild": "react-snap",
+    "heroku-postbuild": "react-scripts build",
+    "pack": "webpack -p --production --config webpack.config.js --progress"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +19,6 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cookie": "^0.3.1",
-    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
@@ -38,8 +39,20 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "rimraf": "^2.6.3",
-    "react-snap": "^1.23.0"
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "lodash-webpack-plugin": "^0.11.5",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   },
   "browserslist": [
     ">0.2%",
