--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "dev": "react-scripts start",
     "devServer": "nodemon server.js",
     "start": "serve -s build",
-    "build": "react-scripts build && react-snap",
-    "postbuild": "react-snap",
-    "heroku-postbuild": "react-scripts build",
+    "build": "react-scripts build",
     "pack": "webpack -p --production --config webpack.config.js --progress"
   },
   "keywords": [],
@@ -18,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-loader": "^8.0.5",
     "cookie": "^0.3.1",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
