--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "react-tabs": "^3.0.0",
+    "react-twitter-embed": "^2.0.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "serve": "^11.0.1",
