--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "query-string": "^6.5.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-helmet": "^5.2.1",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
