--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.5",
     "cookie": "^0.3.1",
@@ -24,6 +25,7 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.5.0",
     "react": "^16.8.2",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.1",
     "react-redux": "^6.0.1",
