Can Drag and Drop

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "query-string": "^6.5.0",
     "react": "^16.8.2",
     "react-animated-css": "^1.2.1",
+    "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.1",
     "react-redux": "^6.0.1",
