--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "query-string": "^6.5.0",
     "react": "^16.8.2",
     "react-animated-css": "^1.2.1",
+    "react-async-script-loader": "^0.3.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.1",
+    "react-paypal-button-v2": "^2.6.1",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
