Mixer Login Button

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@mixer/shortcode-oauth": "^1.2.0",
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.5",
